--- a/dist.ini
+++ b/dist.ini
@@ -1,20 +1,45 @@
-name    = Beam-Emitter
-author  = Doug Bell <preaction@cpan.org>
-license = Perl_5
+name             = Beam-Emitter
+main_module      = lib/Beam/Emitter.pm
+author           = Doug Bell <preaction@cpan.org>
+license          = Perl_5
 copyright_holder = Doug Bell
 copyright_year   = 2013
 
+[MetaResources]
+homepage                = https://github.com/preaction/Beam-Emitter
+repository.web          = https://github.com/preaction/Beam-Emitter
+repository.url          = https://github.com/preaction/Beam-Emitter.git
+bugtracker.web          = https://github.com/preaction/Beam-Emitter/issues
+repository.type         = git
 
+[@Basic]
+[ManifestSkip]
+[ReadmeFromPod]
 [ReadmeMarkdownFromPod]
-[CopyReadmeFromBuild]
+[SurgicalPodWeaver]
+
 [@Git]
 [Git::NextVersion]
 [PkgVersion]
 [ModuleBuild]
+[ChangelogFromGit]
 
-[@Filter]
-bundle = @Basic
-remove = Readme
+[Run::BeforeBuild]
+run                     = rm -f LICENSE
+run                     = rm -f Makefile.PL
+run                     = rm -f README
+run                     = rm -f README.mkdn
+
+[Run::AfterBuild]
+run                     = cp %d/LICENSE ./
+run                     = cp %d/Makefile.PL ./
+run                     = cp %d/README ./
+run                     = cp %d/README.mkdn ./
+
+[PruneFiles]
+match                   = ^\..+
+match                   = .*\.ini$
+match                   = ^eg/.*
 
 [Prereqs]
 Moo = 0
