switch to Type::Tiny

--- a/dist.ini
+++ b/dist.ini
@@ -82,7 +82,7 @@ commit_msg = release v%v%n%n%c
 
 [Prereqs]
 Moo = 0
-MooX::Types::MooseLike = 0
+Types::Standard = 0
 
 [Prereqs / TestRequires]
 Test::Compile = 0
