add more missing dependencies
Even core dependencies should be specified

--- a/dist.ini
+++ b/dist.ini
@@ -81,6 +81,10 @@ allow_dirty = CHANGES
 commit_msg = release v%v%n%n%c
 
 [Prereqs]
+strict = 0
+warnings = 0
+Scalar::Util = 0
+Carp = 0
 Moo = 0
 Types::Standard = 0
 
