fix dist.ini after copying from Beam-Wire

--- a/dist.ini
+++ b/dist.ini
@@ -1,6 +1,6 @@
 ; --- Project details
-name             = Beam-Wire
-main_module      = lib/Beam/Wire.pm
+name             = Beam-Emitter
+main_module      = lib/Beam/Emitter.pm
 author           = Doug Bell <preaction@cpan.org>
 license          = Perl_5
 copyright_holder = Doug Bell
