allow cpanfile to be dirty

--- a/dist.ini
+++ b/dist.ini
@@ -74,6 +74,7 @@ copy = Makefile.PL
 changelog = CHANGES
 allow_dirty_match = README.*
 allow_dirty_match = .*[.]PL
+allow_dirty = cpanfile
 allow_dirty = INSTALL
 allow_dirty = LICENSE
 allow_dirty = CHANGES
