--- a/dist.ini
+++ b/dist.ini
@@ -80,6 +80,7 @@ allow_dirty = LICENSE
 allow_dirty = CHANGES
 ; Automatically commit with release version and changelog
 commit_msg = release v%v%n%n%c
+tag_message = %N v%v - %{yyyy-MM-dd}d%n%n%c ; Tag annotations show up in github release list
 
 [Prereqs]
 strict = 0
