update Types::Standard to 0.008
This is the first version with ConsumerOf.

Fixes #4

--- a/dist.ini
+++ b/dist.ini
@@ -90,7 +90,7 @@ warnings = 0
 Scalar::Util = 0
 Carp = 0
 Moo = 0
-Types::Standard = 0
+Types::Standard = 0.008 ; First version with ConsumerOf
 
 [Prereqs / TestRequires]
 Test::Compile = 0
