add link to #beam on irc.perl.org
Fixes #2

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ do_munging = 0
 
 [MetaResources]
 homepage                = https://github.com/preaction/Beam-Emitter
+IRC                     = irc://irc.perl.org/#beam
 repository.web          = https://github.com/preaction/Beam-Emitter
 repository.url          = https://github.com/preaction/Beam-Emitter.git
 bugtracker.web          = https://github.com/preaction/Beam-Emitter/issues
