--- a/dist.ini
+++ b/dist.ini
@@ -32,6 +32,8 @@ repository.type         = git
 [CPANFile]
 [Git::Contributors]
 ; authordep Pod::Weaver::Section::Contributors
+[Test::ReportPrereqs]
+[Test::Compile]
 
 ; --- Repository management
 [Git::GatherDir]
@@ -98,6 +100,5 @@ Moo = 0
 Types::Standard = 0.008 ; First version with ConsumerOf
 
 [Prereqs / TestRequires]
-Test::Compile = 0
 Test::Exception = 0
 Test::More = 0
