fix circular references in unsubscribe callback
The unsubscribe callback is an opportunity to make memory cycles more
difficult to create, not inevitable.

Refs #11

--- a/dist.ini
+++ b/dist.ini
@@ -101,3 +101,6 @@ Types::Standard = 0.008 ; First version with ConsumerOf
 [Prereqs / TestRequires]
 Test::Exception = 0
 Test::More = 0
+
+[Prereqs / TestRecommends]
+Test::LeakTrace = 0
