--- a/dist.ini
+++ b/dist.ini
@@ -23,12 +23,21 @@ repository.type         = git
 -bundle = @Basic
 ; GatherDir must be configured separately
 -remove = GatherDir
+-remove = Readme
 
-[ReadmeFromPod]
-[ReadmeMarkdownFromPod]
+[Readme::Brief]
+[ReadmeAnyFromPod]
+location = root
+filename = README.mkdn
+type = markdown
+
 [PodWeaver]
+replacer = replace_with_comment
+post_code_replacer = replace_with_nothing
 [PkgVersion]
+die_on_line_insertion = 1
 [CPANFile]
+[MetaJSON]
 [Git::Contributors]
 ; authordep Pod::Weaver::Section::Contributors
 [Test::ReportPrereqs]
