remove fake release debug information

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,6 @@ IRC                     = irc://irc.perl.org/#beam
 ; GatherDir must be configured separately
 -remove = GatherDir
 -remove = Readme
--remove = UploadToCPAN
 
 [Readme::Brief]
 [ReadmeAnyFromPod]
@@ -92,9 +91,6 @@ allow_dirty = INSTALL
 allow_dirty = LICENSE
 allow_dirty = CHANGES
 
-;[UploadToCPAN]
-[FakeRelease]
-
 [Git::Commit / Commit_Dirty_Files]
 ; Automatically commit with release version and changelog
 changelog = CHANGES
@@ -125,7 +121,7 @@ commit_msg = incrementing version after release
 allow_dirty = CHANGES
 allow_dirty_match = ^lib/.*\.pm$
 allow_dirty_match = .*[.]PL
-;[Git::Push]
+[Git::Push]
 
 [Prereqs]
 strict = 0
