fix travis badges

--- a/dist.ini
+++ b/dist.ini
@@ -77,7 +77,7 @@ copy = CHANGES
 
 [Run::AfterBuild]
 ; Add travis and coveralls badges to README.mkdn
-run = perl -pi -e 's{(# SYNOPSIS)}{# STATUS\n\n<a href="https://travis-ci.org/preaction/Beam-Wire"><img src="https://travis-ci.org/preaction/Beam-Wire.svg?branch=master"></a><a href="https://coveralls.io/r/preaction/Beam-Wire"><img src="https://coveralls.io/repos/preaction/Beam-Wire/badge.png" alt="Coverage Status" /></a>\n\n$1}' README.mkdn
+run = perl -pi -e 's{(# SYNOPSIS)}{# STATUS\n\n<a href="https://travis-ci.org/preaction/Beam-Emitter"><img src="https://travis-ci.org/preaction/Beam-Emitter.svg?branch=master"></a><a href="https://coveralls.io/r/preaction/Beam-Emitter"><img src="https://coveralls.io/repos/preaction/Beam-Emitter/badge.png" alt="Coverage Status" /></a>\n\n$1}' README.mkdn
 
 ; --- Git management
 [CheckChangesHasContent]
@@ -122,6 +122,8 @@ allow_dirty = CHANGES
 allow_dirty_match = ^lib/.*\.pm$
 allow_dirty_match = .*[.]PL
 [Git::Push]
+
+; --- Project-specific directives
 
 [Prereqs]
 strict = 0
