--- a/dist.ini
+++ b/dist.ini
@@ -130,6 +130,7 @@ Types::Standard = 0.008 ; First version with ConsumerOf
 [Prereqs / TestRequires]
 Test::Exception = 0
 Test::More = 0
+Test::Fatal = 0
 
 [Prereqs / TestRecommends]
 Test::LeakTrace = 0
