--- a/dist.ini
+++ b/dist.ini
@@ -132,6 +132,7 @@ Types::Standard = 0.008 ; First version with ConsumerOf
 Test::More = 0
 Test::Fatal = 0
 Test::API = 0
+Test::Lib = 0
 
 [Prereqs / TestRecommends]
 Test::LeakTrace = 0
